--- a/cse.html
+++ b/cse.html
@@ -5,5 +5,7 @@
 		<body>
 	 	<h1>Computer Science Engineering</h1>
 		<img src="c5.jpg" width="30%" heigth="30%">
+		<h2>Short Description on CSE</h2>
+		Computer Science and Engineering (CSE) is a field that combines principles of computer science and engineering to design, develop, and optimize computing systems and software. CSE encompasses a wide range of topics, including algorithms, data structures, artificial intelligence, networking, and software engineering. Professionals in CSE play crucial roles in creating innovative technologies and solving complex problems in various industries. The field continuously evolves, driving advancements in computing and shaping the digital landscape
 	</body>
-<html/>
+</html>
