--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 	<body>
 		<h1>Let's Learn C</h1>
  		<img src="c2.jpg" width="40%" heigth="40%">
-		<h2>Advantages and Disadvantages</h2>
+		<h2>About C Programming</h2>
+		C programming is a powerful and versatile language for system-level programming and is widely used for developing operating systems, embedded systems, and applications requiring high performance and low-level control.
+		<h3>Advantages and Disadvantages</h3>
 		<img src="c1.png" width="40%" heigth="40%">
+		To the more about CSE click
+		<a href="cse.html">here</a>
+		<p>other links provided</p>
+        <a href="https://sannidvarma.github.io/intr">here</a>		
 	</body>
 </html>
