--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 		C programming is a powerful and versatile language for system-level programming and is widely used for developing operating systems, embedded systems, and applications requiring high performance and low-level control.
 		<h3>Advantages and Disadvantages</h3>
 		<img src="c1.png" width="40%" heigth="40%">
-		To the more about CSE click
+		<p>To know more about CSE click</p>
 		<a href="cse.html">here</a>
-		<p>other links provided</p>
-        <a href="https://sannidvarma.github.io/intr">here</a>		
+		<p>other links provided</p><a href="https://sannidvarma.github.io/intr">here</a>		
 	</body>
 </html>
