--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<img src="c1.png" width="40%" heigth="40%">
 		<p>To know more about CSE click</p>
 		<a href="cse.html">here</a>
-		<p>other links provided</p><a href="https://sannidvarma.github.io/intr">here</a>		
+		<p>other links provided</p><a href="https://sannidvarma.github.io/intr/">here</a>		
 	</body>
 </html>
