--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 		<img src="c1.png" width="40%" heigth="40%">
 		<p>To know more about CSE click</p>
 		<a href="cse.html">here</a>
+		<p>To know about my native place</p>
 		<a href="webpage.html">here</a>
 
-		<p>other links provided</p><a href="https://sannidvarma.github.io/intr/">here</a>		
+				
 	</body>
 </html>
