--- a/webpage.html
+++ b/webpage.html
@@ -7,6 +7,6 @@
 
 	<body>
 	<h1>My Native place is hyderabad, i lived all my childhood over there.<h1>
-	img src="native.jpg" width="30%" height=""30%
+	<img src="native.jpg" width="30%" height=""30%>
 	</body>
 </html>
